--- a/roles/ca/defaults/main.yml
+++ b/roles/ca/defaults/main.yml
@@ -1,7 +1,5 @@
 ---
 # defaults file for CA
-# name of the CA node, required
-name: ca1
 # domain of the CA node. if missing, the local name will be used.
 domain: sample.com
 # cert for the CA node. If not specified, operator will create
@@ -13,3 +11,11 @@ certs:
   key:
   tlsCert:
   tlsKey:
+# admin id and password secret, the default will be the CA node
+# name, domain name + adminSecret, character dot will be replaced
+# by underscore. For example, the secert name for this spec will
+# be ca1_sample_com_admin_secret.
+adminSecret:
+
+#
+certSecret:
