Added private key creation
now certificate and private key get created.

Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/roles/ca/tasks/main.yml
+++ b/roles/ca/tasks/main.yml
@@ -10,6 +10,12 @@
     state: "directory"
     mode: 0775
 
+- name: Generate a private key
+  community.crypto.openssl_privatekey:
+    path: "{{ workdir }}/{{ nodename }}.key"
+    curve: secp256r1
+    type: ECC
+
 - name: Generate an Certificate Signing Request
   community.crypto.openssl_csr:
     path: "{{ workdir }}/{{ nodename}}.csr"
