--- a/requirements.yml
+++ b/requirements.yml
@@ -4,5 +4,7 @@ collections:
     version: "1.2.1"
   - name: operator_sdk.util
     version: "0.2.0"
+  - name: community.general
+    version: "3.4.0"
   - name: community.crypto
     version: "1.7.1"
