fixed varialbe bug
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_ca.yaml
+++ b/config/samples/operator_v1alpha1_ca.yaml
@@ -4,6 +4,6 @@ metadata:
   name: ca-sample
 spec:
   # Add fields here
-  domain: 915f8ff1-us-south.lb.appdomain.cloud
+  domain:
   certs:
   admin:
