--- a/playbooks/add-istio-port.yaml
+++ b/playbooks/add-istio-port.yaml
@@ -1,48 +1,36 @@
-# This file include tasks to add a new port to istio
-
-
-# Update istio system to allow a new port to be open
-# We need to figure out how to get a port 
-# 1. via configuration parameter
-# 2. Automatically find one which is available cluster wide
-- name: Setup an external port for the node
-  set_fact:
-    ext_port: 31066
-    istio_namespace: 'istio-system'
-    istio_ingressgateway: 'istio-ingressgateway'
-
 # update istio service to support new tcp port
-- name: Adding the port to istio service
-  community.kubernetes.k8s:
-    definition:
+- name: Update istio ingress gateway service and its deployment
+  when: ext_port > 0
+  block:
+  - name: Adding the port to istio ingress service
+    community.kubernetes.k8s:
+      name: '{{ istio_service_name }}'
+      namespace: '{{ istio_namespace }}'
       api_version: v1
       kind: Service
-      metadata:
-        name: '{{ istio_ingressgateway }}'
-        namespace: '{{ istio_namespace }}'
-      merge_type: merge
-      spec:
-        ports:
-        - name: "tcp{{ ext_port }}"
-          port: "{{ ext_port }}"
-          protocol: TCP
-          targetPort: "{{ ext_port }}"
-
-# Update istio deployment with the new port
-- name: Adding the port to istio deployment
-  community.kubernetes.k8s:
-    definition:
-      api_version: apps/v1
-      kind: Deployment
-      metadata:
-        name: '{{ istio_ingressgateway }}'
-        namespace: '{{ istio_namespace }}'
       merge_type: strategic-merge
-      spec:
-        template:
-          spec:
-            containers:
-            - name: istio-proxy
-              ports:
-              - containerPort: "{{ ext_port }}"
-                protocol: TCP
+      definition:
+        spec:
+          ports:
+          - name: "tcp{{ ext_port }}"
+            port: "{{ ext_port }}"
+            protocol: TCP
+            targetPort: "{{ ext_port }}"
+  
+  # Update istio deployment with the new port
+  - name: Adding the port to istio ingress deployment
+    community.kubernetes.k8s:
+      name: '{{ istio_deplyment_name }}'
+      namespace: '{{ istio_namespace }}'
+      api_version: v1
+      kind: Deployment
+      merge_type: strategic-merge
+      definition:
+        spec:
+          template:
+            spec:
+              containers:
+              - name: istio-proxy
+                ports:
+                - containerPort: "{{ ext_port }}"
+                  protocol: TCP
