--- a/roles/ca/tasks/main.yml
+++ b/roles/ca/tasks/main.yml
@@ -1,4 +1,19 @@
 ---
+# Try to get istio info
+- name: Get istio info
+  include_tasks: "{{ role_path }}/../../playbooks/get-istio-info.yaml"
+
+- name: Search for the ca node
+  community.kubernetes.k8s_info:
+    kind: CA
+    api_version: operator.fabric.hyperledger.org/v1alpha1
+    name: '{{ ansible_operator_meta.name }}'
+    namespace: '{{ ansible_operator_meta.namespace }}'
+  register: ca_operator
+
+- name: Check if this will be a new operator or an update
+  set_fact:
+    new_node: "{{ ((ca_operator.resources | length) == 0)| ternary('true', 'false') }}"
 
 - name: Get the home directory
   set_fact:
@@ -223,8 +238,11 @@
 
 # Here we figure out how to expose the node endpoint
 
+# The following tasks are all for exposing the node endpoint to
+# outside of the k8s cluster using istio
 # When include another playbook, only role_path can be used
 # both playbook_dir and inventory_dir will be mapped to tmp directory 
+
 - name: Add a new istio port to istio ingress gateway
   include_tasks: "{{ role_path }}/../../playbooks/add-istio-port.yaml"
 
