Fixed gateway and virtual service issue
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/crd/bases/operator.fabric.hyperledger.org_cas.yaml
+++ b/config/crd/bases/operator.fabric.hyperledger.org_cas.yaml
@@ -3,6 +3,8 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: cas.operator.fabric.hyperledger.org
+  annotations:
+    "ansible.sdk.operatorframework.io/verbosity": "1"
 spec:
   group: operator.fabric.hyperledger.org
   names:
