--- a/roles/ca/tasks/main.yml
+++ b/roles/ca/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: Validate configurations
+  include_tasks: "validation.yaml"
+
 # Try to get istio info
 - name: Get istio info
   include_tasks: "{{ role_path }}/../../playbooks/get-istio-info.yaml"
@@ -15,10 +18,10 @@
   set_fact:
     new_node: "{{ ((ca_operator.resources | length) == 0)| ternary('true', 'false') }}"
 
-- name: Get the home directory
+- name: Get the home directory and setup node name
   set_fact:
     workdir: "{{ lookup('env','HOME') }}/vars"
-    nodename: "{{ ansible_operator_meta.name }}{{ (domain==None)|ternary('', '.'+domain) }}"
+    nodename: "{{ ansible_operator_meta.name }}.{{ organization }}"
 
 - name: Create canonical name for the node
   set_fact:
@@ -90,12 +93,9 @@
       path: "{{ workdir }}/keys/{{ cnodename }}-{{ item }}.csr"
       privatekey_path: "{{ workdir }}/keys/{{ cnodename }}-{{ item }}-key.pem"
       subject:
-        C: US
-        ST: "North Carolina"
-        L: "Raleigh"
-        O: "{{ domain }}"
-      subject_alt_name: "DNS:{{ nodename }}{{ (domain==None)|ternary('', ',DNS:'+domain) }}"
-      common_name: "{{ nodename }}"
+        O: "{{ organization }}"
+      subject_alt_name: "DNS:{{ nodename }},DNS:{{ istio_hostname }}"
+      common_name: "{{ istio_hostname }}"
       basic_constraints_critical: yes
       basic_constraints: 
       - 'CA:TRUE'
@@ -169,7 +169,7 @@
           matchLabels:
             k8s-app: '{{ cnodename }}'
             hlf-type: ca
-            hlf-dn: '{{ domain }}'
+            hlf-dn: '{{ organization }}'
             hlf-mspid: '{{ cnodename }}'
         serviceName: '{{ ansible_operator_meta.name }}'
         replicas: 1
@@ -187,7 +187,7 @@
             labels:
               k8s-app: '{{ cnodename }}'
               hlf-type: ca
-              hlf-dn: '{{ domain }}'
+              hlf-dn: '{{ organization }}'
               hlf-mspid: '{{ cnodename }}'
           spec:
             volumes:
@@ -242,19 +242,24 @@
 # outside of the k8s cluster using istio
 # When include another playbook, only role_path can be used
 # both playbook_dir and inventory_dir will be mapped to tmp directory 
-
-- name: Add a new istio port to istio ingress gateway
-  include_tasks: "{{ role_path }}/../../playbooks/add-istio-port.yaml"
-
 - name: Add gateway and virtual service
   include_tasks: "{{ role_path }}/../../playbooks/add-gw-vs.yaml"
 
-# Update the crd to have endpoints and other possible information 
+- name: Check the existance of the gateway
+  community.kubernetes.k8s_info:
+    api_version: 'networking.istio.io/v1beta1'
+    kind: Gateway
+    name: '{{ ansible_operator_meta.name }}-gateway'
+    namespace: '{{ ansible_operator_meta.namespace }}'
+  register: thegateway
+
+# Update the crd to have endpoints and other possible information
 - name: update the crd status
+  when: thegateway.resources | length == 1
   operator_sdk.util.k8s_status:
     api_version: operator.fabric.hyperledger.org/v1alpha1
     kind: CA
     name: "{{ ansible_operator_meta.name }}"
     namespace: "{{ ansible_operator_meta.namespace }}"
     status:
-      endpoint: '{{ domain }}:{{ ext_port}}'
+      endpoint: '{{ istio_hostname }}:{{ thegateway.resources[0].spec.servers[0].port.number }}'
