--- a/playbooks/destroy.yml
+++ b/playbooks/destroy.yml
@@ -26,3 +26,22 @@
       - service
       - deployment
 
+  - name: Retrieve all the persistent volume claims
+    community.kubernetes.k8s_info:
+      api_version: v1
+      kind: PersistentVolumeClaim
+      namespace: "{{ ansible_operator_meta.namespace }}"
+    register: pvc_info
+
+  - set_fact:
+      pvc_name: "{{ ansible_operator_meta.name }}-{{ organization|replace('.', '-') }}"
+
+  - name: Delete all the pvcs
+    community.kubernetes.k8s:
+      state: absent
+      api_version: "{{ item.apiVersion }}"
+      kind: "{{ item.kind }}"
+      name: "{{ item.metadata.name }}"
+      namespace: "{{ item.metadata.namespace }}"
+    when: item.metadata.labels['k8s-app'] == pvc_name
+    with_items: "{{ pvc_info.resources }}"
