Added more configurable parameters
added storage size, log level and fabric release

Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -19,6 +19,7 @@ rules:
       - persistentvolumeclaims
       - events
       - configmaps
+      - namespaces
     verbs:
       - create
       - delete
