--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -3,4 +3,5 @@ resources:
 - operator_v1alpha1_orderer.yaml
 - operator_v1alpha1_ca.yaml
 - operator_v1alpha1_peer.yaml
+- operator_v1alpha1_nodecert.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
