--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,4 +5,5 @@ resources:
 - bases/operator.fabric.hyperledger.org_orderers.yaml
 - bases/operator.fabric.hyperledger.org_cas.yaml
 - bases/operator.fabric.hyperledger.org_peers.yaml
+- bases/operator.fabric.hyperledger.org_nodecerts.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
